# painlessMesh_station

./: CMakeLists.txt
src/: camera.cpp  client copy 30 fps.cpp  client copy base64.cpp  client copy try recvd.cpp  client copy.cpp  client.cpp  main (copy).cpp  main.cpp  server copy 30 fps .cpp  server copy base64.cpp  server copy try send.cpp  server copy with camera.cpp  server copy.cpp  server.cpp
